# sai_test

./: .cproject  .gitignore  .mxproject  CMakeLists.txt  H750IBK6_LED.ioc  README.md  stm32h750ibkx_FLASH.ld
Core/Inc/: FreeRTOSConfig.h  bsp_sdram.h  files.h  log.h  main.h  sai.h  sdmmc.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h  utils.h
Core/Src/: audio.c  files.c  freertos.c  gpio.c  i2c.c  ltdc.c  main.c  sai.c  sdmmc.c  spi.c  stm32h7xx_it.c  system_stm32h7xx.c  tim.c
Drivers/CMSIS/: CMakeLists.txt
Drivers/STM32H7xx_HAL_Driver/: CMakeLists.txt
Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_sd.c
Drivers/audio/: CMakeLists.txt
Drivers/audio/Inc/: audio.h
Drivers/audio/Src/: audio.c
Drivers/pcm5122/: CMakeLists.txt
Drivers/pcm5122/Inc/: pcm5122.h
Drivers/pcm5122/Src/: pcm5122.c
FATFS/: CMakeLists.txt
FATFS/App/: fatfs.c  fatfs.h
cmake/: gcc-arm-none-eabi.cmake  vscode_generated.cmake
